WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204152
WebDriver: duration can be undefined in pause actions
https://bugs.webkit.org/show_bug.cgi?id=204152
Summary
WebDriver: duration can be undefined in pause actions
Carlos Garcia Campos
Reported
2019-11-13 06:01:12 PST
We are making it mandatory. imported/w3c/webdriver/tests/perform_actions/validity.py::test_pause_without_duration[none] imported/w3c/webdriver/tests/perform_actions/validity.py::test_pause_without_duration[key] imported/w3c/webdriver/tests/perform_actions/validity.py::test_pause_without_duration[pointer]
Attachments
Patch
(2.58 KB, patch)
2019-11-13 06:03 PST
,
Carlos Garcia Campos
clopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-11-13 06:03:22 PST
Created
attachment 383451
[details]
Patch
Carlos Garcia Campos
Comment 2
2019-11-13 06:40:29 PST
Committed
r252408
: <
https://trac.webkit.org/changeset/252408
>
Radar WebKit Bug Importer
Comment 3
2019-11-13 06:41:24 PST
<
rdar://problem/57152743
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug