WebDriver: duration can be undefined in pause actions https://bugs.webkit.org/show_bug.cgi?id=204152

Reviewed by Carlos Alberto Lopez Perez.

Make duration optional in pause actions.

Fixes: imported/w3c/webdriver/tests/perform_actions/validity.py::test_pause_without_duration[none]
       imported/w3c/webdriver/tests/perform_actions/validity.py::test_pause_without_duration[key]
       imported/w3c/webdriver/tests/perform_actions/validity.py::test_pause_without_duration[pointer]

* Session.cpp:
(WebDriver::Session::performActions):
* WebDriverService.cpp:
(WebDriver::processPauseAction):

Canonical link: https://commits.webkit.org/217453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252408 268f45cc-cd09-0410-ab3c-d52691b4dbfc